<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>action_server_py</name>
  <version>0.0.0</version>
  <description>Action server</description>
  <maintainer email="andrei.baciu94@gmail.com">root</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>action_interfaces</depend>

  <test_depend>python3-pytest</test_depend>
  <test_depend>launch_testing_ament_cmake</test_depend>
  <test_depend>launch_testing</test_depend>
  <test_depend>launch_ros</test_depend>
  <test_depend>launch</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>